# modbus_ci

./: CMakeLists.txt  README.md  main.c  main.h  modbus_cli.c  modbus_cli.h  read.c
